--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ gen/com/example/picsaw/R.java
 
 appcompat_v7/bin
 appcompat_v7/.settings
+
+appcompat_v7/project.properties
+
+appcompat_v7/project.properties
